# brew-update-helper

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md
.github/workflows/: ci.yml
src/: brew.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  stats.rs  ui.rs  utils.rs
tests/: cli_tests.rs  integration_tests.rs
tests/fixtures/: brew_casks_output.txt  brew_leaves_output.txt  brew_outdated_casks.txt  brew_outdated_formulae.txt  sample_settings.md
