[package]
name = "brew-update-helper"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for selective Homebrew package upgrade management"
authors = ["Anas Mirza <anasmirza534@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
crossterm = "0.27"
ratatui = "0.24"
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[test]]
name = "cli_tests"
path = "tests/cli_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
